--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello World
+<!DOCTYPE html>
+<html >
+<head>
+  <title>Greg Smith - Sidework &amp; Experiments</title>
+</head>
+<body>
+  <h2>Greg Smith - Sidework &amp; Experiments</h2>
+  <ul>
+    <li><a href="http://www.shelbyhohl.com">Shelby Hohl Portfolio Site</a></li>
+  </ul>
+</body>
+</html>
