Added description to link

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
   <h2>Greg Smith - Sidework &amp; Experiments</h2>
   <ul>
-    <li><a href="http://www.shelbyhohl.com">Shelby Hohl Portfolio Site</a></li>
+    <li><a href="http://www.shelbyhohl.com">Shelby Hohl Portfolio Site</a> - First Ruby on Rails site</li>
   </ul>
 </body>
 </html>
