--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html >
 <head>
   <title>Greg Smith - Sidework &amp; Experiments</title>
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
 </head>
 <body>
   <h2>Greg Smith - Sidework &amp; Experiments</h2>
