--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html >
 <head>
-  <title>Greg Smith - Sidework &amp; Experiments</title>
+  <title>Gregory Smith</title>
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
   <h2>Greg Smith - Sidework &amp; Experiments</h2>
