--- a/index.html
+++ b/index.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
-<html >
+<html xmlns:ng="http://angularjs.org" id="ng-app" ng-app="mongoose">
 <head>
+  <meta content="IE=edge" http-equiv="X-UA-Compatible">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>Gregory Smith</title>
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="app/styles/mongoose.css">
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
-<body>
-  <h2>Greg Smith - Sidework &amp; Experiments</h2>
-  <ul>
+<body ontouchstart ng-controller="mongooseCtrl">
+  <ng-include id="header" src="'app/views/partials/header.html'"></ng-include>
+  <div class="section">
+    <div="container" ng-view></div>
+  <!-- <ul>
+    <li>CSS 3 Practice</li>
     <li><a href="http://www.shelbyhohl.com">Shelby Hohl Portfolio Site</a> - First Ruby on Rails site</li>
-  </ul>
+  </ul> -->
+  </div>
+
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.1/angular.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.1/angular-route.min.js"></script>
+  <script src='//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js'></script>
+  <script src="app/scripts/app.js"></script>
+  <script src="app/scripts/controllers/mongoose.js"></script>
+  <script src="app/scripts/controllers/home.js"></script>
+  <script src="app/scripts/controllers/exp.js"></script>
 </body>
 </html>
