Add Music Section and Jumbos

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body ontouchstart ng-controller="mongooseCtrl">
   <ng-include id="header" src="'app/views/partials/header.html'"></ng-include>
   <div class="section">
-    <div="container" ng-view></div>
+    <div class="container" ng-view></div>
   <!-- <ul>
     <li>CSS 3 Practice</li>
     <li><a href="http://www.shelbyhohl.com">Shelby Hohl Portfolio Site</a> - First Ruby on Rails site</li>
