--- a/index.html
+++ b/index.html
@@ -27,5 +27,8 @@
   <script src="app/scripts/controllers/mongoose.js"></script>
   <script src="app/scripts/controllers/home.js"></script>
   <script src="app/scripts/controllers/exp.js"></script>
+  <script src="app/scripts/controllers/music.js"></script>
+  <script src="app/scripts/controllers/todo.js"></script>
+  <script src="app/scripts/factories/factories.js"></script>
 </body>
 </html>
